add link to shakespear char gerneattor

--- a/html/lecture4.html
+++ b/html/lecture4.html
@@ -157,6 +157,14 @@
             <p>It begins with a starting character and iteratively selects the next character based on the model until
                 it reaches a stopping condition.</p>
         </section>
+    <section>
+        <h1>nanoGPT - Generating Shakespeare</h1>
+        <p>If you are not a deep learning professional and you just want to feel the magic and get your feet wet, the fastest way to get started is to train a character-level GPT on the works of Shakespeare.  </p>
+        <a href="https://github.com/karpathy/nanoGPT "
+            class="text-blue-400 hover:text-blue-700" target="_blank">Clone Nano-GPT and try the example</a>
+
+
+</section>
     </main>
 
     <footer>
