add transformer examples

--- a/html/links.html
+++ b/html/links.html
@@ -37,6 +37,12 @@
                     topics.</li>
             </ul>
             <ul>
+                <li><a href="https://github.com/Dev-Gaju/Machine-Learning-Starter">Machine Learning Starter - Links and Resources</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://github.com/Dev-Gaju/NNFS-book-with-Implementation/tree/master">Neural Netowrks From Scratch-book-with-Implementation</a></li>
+            </ul>
+            <ul>
                 <li><a href="https://hastie.su.domains/ISLP/ISLP_website.pdf.download.html">An Introduction to
                         Statistical Learning</a></li>
             </ul>
