--- a/html/lecture7.html
+++ b/html/lecture7.html
@@ -80,7 +80,10 @@
         </div>
         <section>
             <h1>Dog Name Generator Using Transformer</h1>
-            <p>This webpage explains a Python script that extends the dog name generation based on the concept of bigrams to an example for Transformers with Attention.</p>
+            <img src="./dog-names-attention.png" alt="Generate Dog Names with Attention" class="lecture-image">
+            <p>This 
+                <a href="dog-name-predictor-with-transformer-model.html"
+                class="text-blue-400 hover:text-blue-700" target="_blank">webpage</a> extends the dog name generation based on the concept of bigrams to an example for Transformers with Attention.</p>
             <p>The code is hosted at: </p>
             <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/python/model-training/dog-names-saved-tokens.py"
                 class="text-blue-400 hover:text-blue-700" target="_blank">dog-names-saved-tokens.py</a>
