--- a/html/lecture7.html
+++ b/html/lecture7.html
@@ -91,8 +91,8 @@
                 class="text-blue-400 hover:text-blue-700" target="_blank">dog-names-saved-tokens.py</a>
         </section>
         <section>
-            <h1>Dog Name Generator Using GPT ARchitecture</h1>
-            <img src="./dog-names-gpt.png" alt="Generate Dog Names with GPT" class="lecture-image">
+            <h1>Dog Name Generator Using GPT Architecture</h1>
+            <img src="./dog-name-gpt.png" alt="Generate Dog Names by training a model with GPT" class="lecture-image">
             <p>This
                 <a href="dog-names-GPT.html" class="text-blue-400 hover:text-blue-700" target="_blank">webpage</a>
                 demonstrates constructing a Generative Pre-Trained Transformer to generate dog names.
