--- a/html/dog-names-GPT.html
+++ b/html/dog-names-GPT.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Comprehensive Learning Path for Machine Learning and Deep Learning</title>
+    <title>Generating Dog Names Using GPT Architecture</title>
     <style>
         table {
             width: 100%;
@@ -40,13 +40,13 @@
                 <li><a href="lecture8.html" class="text-blue-400">8</a></li>
             </ul>
         </nav>
-        <h1>2: Learning Path for Machine Learning and Deep Learning</h1>
+        <h1>Generating Dog Names Using GPT Architecture</h1>
     </header>
 
     <main class="p-4">
-        <h2>Generating Dog Names Using GPT Architecture</h2>
+        <img src="./dog-names-trained-model.png" alt="Generate Dog Names by training a model with GPT" class="lecture-image">
         <p>
-            This Python script leverages a Generative Pre-trained Transformer (GPT) architecture to generate dog names.
+            This  <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/python/model-training/dog-name-GPT.py" class="text-blue-400">Python script</a> leverages a Generative Pre-trained Transformer (GPT) architecture to generate dog names.
             The model is trained on a dataset of dog names and can generate new, unique names based on the learned patterns.
         </p>
         <h3>Overview</h3>
