--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
             <ul class="flex space-x-4">
                 <li><a href="./index.html" class="text-blue-400">Home</a></li>
                 <li><a href="./markmap.html" class="text-blue-400">Mindmap</a></li>
+                <li><a href="./python-script-inventory.html" class="text-blue-400">Python</a></li>
                 <li><a href="./links.html" class="text-blue-400">Links</a></li>
                 <li><a href="./syllabus.html" class="text-blue-400">Syllabus</a></li>
             </ul>
