--- a/html/lecture3.html
+++ b/html/lecture3.html
@@ -61,7 +61,7 @@
                     <p><a href="https://www.youtube.com/watch?v=SmZmBKc7Lrs">Video - The Most Important Algorithm in
                         Machine Learning</a>
                     </p>
-                    <p><a href="curve-fitting.html class=" text-blue-400">Curve Fitting</a></p></li>
+                    <p><a href="curve-fitting.html" class=" text-blue-400">Curve Fitting</a></p></li>
                 <p></p>
                 <li><strong>1990s</strong> - Support Vector Machines and Advances in Theory:
                     <ul>
@@ -70,7 +70,7 @@
                         <li>1997: Long Short-Term Memory (LSTM) networks are introduced by Hochreiter & Schmidhuber,
                             significantly improving recurrent neural network capabilities.</li>
                     </ul>
-                    <p><a href="lstm.html class=" text-blue-400">Long Short-Term Memory (LSTM)</a></p></li>
+                    <p><a href="lstm.html" class=" text-blue-400">Long Short-Term Memory (LSTM)</a></p></li>
                 </li>
                 <img src="./svms-1990s.png" alt="SVMs" class="section-image">
 
