--- a/html/lecture4.html
+++ b/html/lecture4.html
@@ -99,9 +99,9 @@
             <p>This webpage explains a Python script that generates dog names based on the concept of bigrams. Bigrams
                 are pairs of consecutive characters used to predict the next character in a sequence.</p>
             <p>The code is hosted at: </p>
-            <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/python/model-training/dog_name_predictor.py"
+            <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/python/dog-name-model-training/dog_name_predictor.py"
                 class="text-blue-400 hover:text-blue-700" target="_blank">dog_name_predictor.py</a>
-            <p>Try it on a website: </p>
+            <p>Try it on a website: (may be expired heroku trial ...)</p>
             <a href="https://arcane-woodland-29255-3c8c871eb38d.herokuapp.com/ "
                 class="text-blue-400 hover:text-blue-700" target="_blank">Dog Name Generator</a>
 
