--- a/html/python-script-inventory.html
+++ b/html/python-script-inventory.html
@@ -53,10 +53,12 @@
         <section>
             <h3 class="text-xl font-bold mt-4">Project Descriptions</h3>
             
+            <img src="./dog-name-gpt.png" alt="Generate Dog Names by training a model with GPT" class="section-image">
             <div>
                 <h4 class="text-lg font-bold">dog-name-model-training</h4>
                 <p>Contains scripts for training and using models to predict dog names. Utilizes GPT-based models and includes data preprocessing and model parameters.</p>
             </div>
+
 
             <div>
                 <h4 class="text-lg font-bold">ethereum-transactions</h4>
@@ -99,7 +101,7 @@
             </div>
         </section>
     </main>
-    <img src="./dog-name-gpt.png" alt="Generate Dog Names by training a model with GPT" class="lecture-image">
+
 
     <footer class="bg-gray-800 text-white p-4">
         <nav>
