--- a/html/python-script-inventory.html
+++ b/html/python-script-inventory.html
@@ -45,11 +45,8 @@
     <main class="p-4">
         <section>
             <h2 class="text-2xl font-bold">Overview of Python Scripts for Machine Learning</h2>
-            <p>This page provides an overview of various Python scripts and projects related to machine learning and
-                deep learning. Each project folder contains scripts, datasets, and other resources needed to run the
-                models and understand their functionality.</p>
-            <p><a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python"
-                    class="text-blue-400">Repository for Python Scripts</a></p>
+            <p>This page provides an overview of various Python scripts and projects related to <a href="https://en.wikipedia.org/wiki/Machine_learning" class="text-blue-400">machine learning</a> and <a href="https://en.wikipedia.org/wiki/Deep_learning" class="text-blue-400">deep learning</a>. Each project folder contains scripts, datasets, and other resources needed to run the models and understand their functionality.</p>
+            <p><a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python" class="text-blue-400">Repository for Python Scripts</a></p>
         </section>
 
         <section>
@@ -58,61 +55,50 @@
             <img src="./dog-name-gpt.png" alt="Generate Dog Names by training a model with GPT" class="section-image">
             <div>
                 <h4 class="text-lg font-bold">dog-name-model-training</h4>
-                <p>Contains scripts for training and using models to predict dog names. Utilizes GPT-based models and
-                    includes data preprocessing and model parameters.</p>
+                <p>Contains scripts for training and using models to predict dog names. Utilizes <a href="https://en.wikipedia.org/wiki/GPT-4" class="text-blue-400">GPT-based models</a> and includes data preprocessing and model parameters.</p>
             </div>
-
 
             <div>
                 <h4 class="text-lg font-bold">ethereum-transactions</h4>
-                <p>Scripts and datasets for analyzing Ethereum transactions. Includes visualizations and labeled
-                    datasets for transaction classification.</p>
+                <p>Scripts and datasets for analyzing <a href="https://en.wikipedia.org/wiki/Ethereum" class="text-blue-400">Ethereum</a> transactions. Includes visualizations and labeled datasets for transaction classification.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">examples</h4>
-                <p>Contains example scripts for basic machine learning tasks such as bag-of-words text processing and
-                    classification using various datasets.</p>
+                <p>Contains example scripts for basic machine learning tasks such as <a href="https://en.wikipedia.org/wiki/Bag-of-words_model" class="text-blue-400">bag-of-words</a> text processing and classification using various datasets.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">gas-price-anomaly</h4>
-                <p>Scripts for detecting anomalies in Ethereum gas prices. Includes preprocessing steps and anomaly
-                    detection models.</p>
+                <p>Scripts for detecting anomalies in Ethereum gas prices. Includes preprocessing steps and <a href="https://en.wikipedia.org/wiki/Anomaly_detection" class="text-blue-400">anomaly detection</a> models.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">gensim-word-vectors-demo</h4>
-                <p>Demonstrates the use of Gensim for word vector operations including word similarity and analogy tasks
-                    using pre-trained GloVe embeddings.</p>
+                <p>Demonstrates the use of <a href="https://radimrehurek.com/gensim/" class="text-blue-400">Gensim</a> for word vector operations including word similarity and analogy tasks using pre-trained <a href="https://nlp.stanford.edu/projects/glove/" class="text-blue-400">GloVe embeddings</a>.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">neural-net-transaction-classifier</h4>
-                <p>Contains scripts for building and training neural network models to classify Ethereum transactions.
-                    Includes data preprocessing and model evaluation steps.</p>
+                <p>Contains scripts for building and training <a href="https://en.wikipedia.org/wiki/Artificial_neural_network" class="text-blue-400">neural network</a> models to classify Ethereum transactions. Includes data preprocessing and model evaluation steps.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">rules-engine</h4>
-                <p>Scripts for implementing a rules engine to classify transactions based on predefined rules. Includes
-                    visualizations for confusion matrices and feature importances.</p>
+                <p>Scripts for implementing a rules engine</a> to classify transactions based on predefined rules. Includes visualizations for confusion matrices and feature importances.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">transformers</h4>
-                <p>Uses transformer models for transaction classification tasks. Includes scripts for data
-                    preprocessing, model training, and evaluation.</p>
+                <p>Uses <a href="https://en.wikipedia.org/wiki/Transformer_(machine_learning_model)" class="text-blue-400">transformer models</a> for transaction classification tasks. Includes scripts for data preprocessing, model training, and evaluation.</p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">variational-encoder</h4>
-                <p>Contains scripts for building and training variational autoencoders to detect anomalies in Ethereum
-                    transactions. Includes data preprocessing and model evaluation.</p>
+                <p>Contains scripts for building and training <a href="https://en.wikipedia.org/wiki/Variational_autoencoder" class="text-blue-400">variational autoencoders</a> to detect anomalies in Ethereum transactions. Includes data preprocessing and model evaluation.</p>
             </div>
         </section>
     </main>
-
 
     <footer class="bg-gray-800 text-white p-4">
         <nav>
