--- a/html/python-script-inventory.html
+++ b/html/python-script-inventory.html
@@ -51,11 +51,10 @@
 
         <section>
             <h3 class="text-xl font-bold mt-4">Project Descriptions</h3>
-
-            <img src="./dog-name-gpt.png" alt="Generate Dog Names by training a model with GPT" class="section-image">
             <div>
                 <h4 class="text-lg font-bold">dog-name-model-training</h4>
                 <p>Contains scripts for training and using models to predict dog names. Utilizes <a href="https://en.wikipedia.org/wiki/GPT-4" class="text-blue-400">GPT-based models</a> and includes data preprocessing and model parameters.</p>
+                <img src="./python-class.png" alt="Python Script Inventory" class="section-image">
             </div>
 
             <div>
