--- a/html/dog-names-GPT.html
+++ b/html/dog-names-GPT.html
@@ -44,7 +44,6 @@
     </header>
 
     <main class="p-4">
-        <img src="./dog-names-trained-model.png" alt="Generate Dog Names by training a model with GPT" class="lecture-image">
         <p>
             This  <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/python/model-training/dog-name-GPT.py" class="text-blue-400">Python script</a> leverages a Generative Pre-trained Transformer (GPT) architecture to generate dog names.
             The model is trained on a dataset of dog names and can generate new, unique names based on the learned patterns.
@@ -84,8 +83,11 @@
         <h3>Script Repository</h3>
         <p>
             The full Python script can be found in the GitHub repository:
-            <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/blob/main/python/model-training/dog-name-GPT.py" class="text-blue-400">dog-name-GPT.py</a>
+            <a href="python/dog-name-model-training/dog-name-GPT.py" class="text-blue-400">dog-name-GPT.py</a>
         </p>
+        <section>
+            <img src="./dog-names-trained-model.png" alt="Generate Dog Names by training a model with GPT" class="section-image">
+        </section>
     </main>
 
     <footer class="bg-gray-800 text-white p-4">
