--- a/html/python-script-inventory.html
+++ b/html/python-script-inventory.html
@@ -53,48 +53,48 @@
             <h3 class="text-xl font-bold mt-4">Project Descriptions</h3>
             <div>
                 <h4 class="text-lg font-bold">dog-name-model-training</h4>
-                <p>Contains scripts for training and using models to predict dog names. Utilizes <a href="https://en.wikipedia.org/wiki/GPT-4" class="text-blue-400">GPT-based models</a> and includes data preprocessing and model parameters.</p>
+                <p>Contains scripts for training and using models to predict dog names. Utilizes <a href="https://en.wikipedia.org/wiki/GPT-4" class="text-blue-400">GPT-based models</a> and includes data preprocessing and model parameters. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/dog-name-model-training" class="text-blue-400">Link to project</a></p>
                 <img src="./python-class.png" alt="Python Script Inventory" class="section-image">
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">ethereum-transactions</h4>
-                <p>Scripts and datasets for analyzing <a href="https://en.wikipedia.org/wiki/Ethereum" class="text-blue-400">Ethereum</a> transactions. Includes visualizations and labeled datasets for transaction classification.</p>
+                <p>Scripts and datasets for analyzing <a href="https://en.wikipedia.org/wiki/Ethereum" class="text-blue-400">Ethereum</a> transactions. Includes visualizations and labeled datasets for transaction classification. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/ethereum-transactions" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">examples</h4>
-                <p>Contains example scripts for basic machine learning tasks such as <a href="https://en.wikipedia.org/wiki/Bag-of-words_model" class="text-blue-400">bag-of-words</a> text processing and classification using various datasets.</p>
+                <p>Contains example scripts for basic machine learning tasks such as <a href="https://en.wikipedia.org/wiki/Bag-of-words_model" class="text-blue-400">bag-of-words</a> text processing and classification using various datasets. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/examples" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">gas-price-anomaly</h4>
-                <p>Scripts for detecting anomalies in Ethereum gas prices. Includes preprocessing steps and <a href="https://en.wikipedia.org/wiki/Anomaly_detection" class="text-blue-400">anomaly detection</a> models.</p>
+                <p>Scripts for detecting anomalies in Ethereum gas prices. Includes preprocessing steps and <a href="https://en.wikipedia.org/wiki/Anomaly_detection" class="text-blue-400">anomaly detection</a> models. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/gas-price-anomaly" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">gensim-word-vectors-demo</h4>
-                <p>Demonstrates the use of <a href="https://radimrehurek.com/gensim/" class="text-blue-400">Gensim</a> for word vector operations including word similarity and analogy tasks using pre-trained <a href="https://nlp.stanford.edu/projects/glove/" class="text-blue-400">GloVe embeddings</a>.</p>
+                <p>Demonstrates the use of <a href="https://radimrehurek.com/gensim/" class="text-blue-400">Gensim</a> for word vector operations including word similarity and analogy tasks using pre-trained <a href="https://nlp.stanford.edu/projects/glove/" class="text-blue-400">GloVe embeddings</a>. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/gensim-word-vectors-demo" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">neural-net-transaction-classifier</h4>
-                <p>Contains scripts for building and training <a href="https://en.wikipedia.org/wiki/Artificial_neural_network" class="text-blue-400">neural network</a> models to classify Ethereum transactions. Includes data preprocessing and model evaluation steps.</p>
+                <p>Contains scripts for building and training <a href="https://en.wikipedia.org/wiki/Artificial_neural_network" class="text-blue-400">neural network</a> models to classify Ethereum transactions. Includes data preprocessing and model evaluation steps. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/neural-net-transaction-classifier" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">rules-engine</h4>
-                <p>Scripts for implementing a rules engine</a> to classify transactions based on predefined rules. Includes visualizations for confusion matrices and feature importances.</p>
+                <p>Scripts for implementing a rules engine to classify transactions based on predefined rules. Includes visualizations for confusion matrices and feature importances. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/rules-engine" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">transformers</h4>
-                <p>Uses <a href="https://en.wikipedia.org/wiki/Transformer_(machine_learning_model)" class="text-blue-400">transformer models</a> for transaction classification tasks. Includes scripts for data preprocessing, model training, and evaluation.</p>
+                <p>Uses <a href="https://en.wikipedia.org/wiki/Transformer_(machine_learning_model)" class="text-blue-400">transformer models</a> for transaction classification tasks. Includes scripts for data preprocessing, model training, and evaluation. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/transformers" class="text-blue-400">Link to project</a></p>
             </div>
 
             <div>
                 <h4 class="text-lg font-bold">variational-encoder</h4>
-                <p>Contains scripts for building and training <a href="https://en.wikipedia.org/wiki/Variational_autoencoder" class="text-blue-400">variational autoencoders</a> to detect anomalies in Ethereum transactions. Includes data preprocessing and model evaluation.</p>
+                <p>Contains scripts for building and training <a href="https://en.wikipedia.org/wiki/Variational_autoencoder" class="text-blue-400">variational autoencoders</a> to detect anomalies in Ethereum transactions. Includes data preprocessing and model evaluation. <a href="https://github.com/michaelkernaghan/Machine-learning-lectures/tree/main/python/variational-encoder" class="text-blue-400">Link to project</a></p>
             </div>
         </section>
     </main>
